--- a/lang/en_gb.lang
+++ b/lang/en_gb.lang
@@ -2,6 +2,7 @@ d2u_staff = D2U Staff
 d2u_staff_area_of_responsibility = Area of responsibility
 d2u_staff_citation = Quote
 d2u_staff_company = Employer from D2U Address addon
+d2u_staff_lang_name = Language specific name (optional)
 d2u_staff_no_link = Do not link
 d2u_staff_no_staff_found = No staff members found.
 d2u_staff_picture = Picture
