add page author modules

--- a/lang/de_de.lang
+++ b/lang/de_de.lang
@@ -1,6 +1,6 @@
 d2u_staff = D2U Mitarbeiter
 d2u_staff_area_of_responsibility = Zuständigkeitsbereich
-d2u_staff_citation = Zitat
+d2u_staff_citation = Zitat / Info
 d2u_staff_company = Arbeitgeber aus D2U Adressen Addon
 d2u_staff_lang_name = Sprachspezifischer Name (optional)
 d2u_staff_no_link = Keine Verknüpfung
