--- a/lang/de_de.lang
+++ b/lang/de_de.lang
@@ -2,6 +2,10 @@ d2u_staff = D2U Mitarbeiter
 d2u_staff_area_of_responsibility = Zuständigkeitsbereich
 d2u_staff_citation = Info
 d2u_staff_company = Unternehmen
+d2u_staff_gender = Geschlecht
+d2u_staff_gender_divers = Divers
+d2u_staff_gender_female = Weiblich
+d2u_staff_gender_male = Männlich
 d2u_staff_knows_about = Kenntnisse
 d2u_staff_lang_name = Sprachspezifischer Name (optional)
 d2u_staff_logo = Logo
