--- a/lang/en_gb.lang
+++ b/lang/en_gb.lang
@@ -2,6 +2,10 @@ d2u_staff = D2U Staff
 d2u_staff_area_of_responsibility = Area of responsibility
 d2u_staff_citation = Short info
 d2u_staff_company = Company
+d2u_staff_gender = Sex
+d2u_staff_gender_divers = Divers
+d2u_staff_gender_female = Female
+d2u_staff_gender_male = Male
 d2u_staff_knows_about = Expertise
 d2u_staff_lang_name = Language specific name (optional)
 d2u_staff_logo = Logo
